--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
   </form>
 
   <div class="qr-section">
-    <h3>Pay using PayTM</h3>
-    <p>Scan the QR code below to make payment:</p>
-    <img src="YOUR_PAYTM_QR_IMAGE_LINK_HERE" alt="PayTM QR Code" width="200">
+    <h3>Pay using <a link="https://paytm.me/8802019549@ptyes">PayTM</a></h3>
   </div>
 
   <script>
