--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </form>
 
   <div class="qr-section">
-    <h3>Pay using <a href="https://paytm.me/8802019549@ptyes">PayTM</a></h3>
+   <a href="upi://pay?pa=8802019549@paytm&amp;pn=Sarika">Pay via UPI (Any App)</a>
   </div>
 
   <script>
